<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <EditText
        android:id="@+id/txtNomeDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Nome Utente"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtCognomeDialog"
        app:layout_constraintEnd_toEndOf="@+id/txtCognomeDialog"
        app:layout_constraintStart_toStartOf="@+id/txtCognomeDialog"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCognomeDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Cognome Utente"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtMailDialog"
        app:layout_constraintEnd_toEndOf="@+id/txtMailDialog"
        app:layout_constraintStart_toStartOf="@+id/txtMailDialog"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeDialog" />

    <EditText
        android:id="@+id/txtMailDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/txtTelefonoDialog"
        app:layout_constraintEnd_toEndOf="@+id/txtTelefonoDialog"
        app:layout_constraintStart_toStartOf="@+id/txtTelefonoDialog"
        app:layout_constraintTop_toBottomOf="@+id/txtCognomeDialog" />


    <EditText
        android:id="@+id/txtTelefonoDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Telefono"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/btnConfermaDialog"
        app:layout_constraintEnd_toEndOf="@+id/btnConfermaDialog"
        app:layout_constraintStart_toStartOf="@+id/btnConfermaDialog"
        app:layout_constraintTop_toBottomOf="@+id/txtMailDialog" />

    <!-- text  field con material design di prova
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text"

        app:layout_constraintBottom_toTopOf="@+id/txtNomeDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lblProva"
            android:layout_width="218dp"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    -->

    <Button
        android:id="@+id/btnConfermaDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="58dp"
        android:text="Conferma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefonoDialog" />


</androidx.constraintlayout.widget.ConstraintLayout>