<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <FrameLayout
        android:id="@+id/frameLayoutInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </FrameLayout>

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblValoreLettura"
        android:layout_width="101dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="294dp"
        android:text="Valore Lettura"
        app:layout_constraintBottom_toTopOf="@+id/txtValoreLettura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCognomeUtente" />

    <EditText
        android:id="@+id/txtValoreLettura"
        android:layout_width="214dp"
        android:layout_height="46dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="182dp"
        android:ems="10"
        android:hint="Inserire valore lettura"

        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/lblData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblValoreLettura" />

    <TextView
        android:id="@+id/lblCodiceUtente"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:text="Codice Utente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- le cose messe dopo lo spazio sono immesse per non fare modificare
        all'utente il codice preso automaticamente, l'utente non deve modificare
        il codice-->
    <EditText
        android:id="@+id/txtCodiceUtente"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="182dp"
        android:ems="10"

        android:fontFamily="sans-serif"
        android:hint="Inserire codice utente"

        android:inputType="number"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/lblNomeUtente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCodiceUtente" />

    <TextView
        android:id="@+id/lblNomeUtente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="311dp"
        android:text="Nome Utente"
        app:layout_constraintBottom_toTopOf="@+id/txtNomeUtente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCodiceUtente" />

    <EditText
        android:id="@+id/txtNomeUtente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="182dp"
        android:ems="10"
        android:hint="Inserire nome Utente"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lblCognomeUtente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNomeUtente" />

    <TextView
        android:id="@+id/lblCognomeUtente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="287dp"
        android:text="Cognome Utente"
        app:layout_constraintBottom_toTopOf="@+id/txtCognomeUtente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeUtente" />

    <EditText
        android:id="@+id/txtCognomeUtente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="182dp"
        android:ems="10"
        android:hint="Inserire cognome utente"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/lblValoreLettura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCognomeUtente" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="182dp"
        android:clickable="true"

        android:ems="10"
        android:focusable="false"
        android:inputType="none"


        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblData" />

    <TextView
        android:id="@+id/lblData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="362dp"
        android:text="Data"
        app:layout_constraintBottom_toTopOf="@+id/txtDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValoreLettura" />


    <Button
        android:id="@+id/btnInvia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="80dp"
        android:text="Invia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="398dp"
        android:layout_height="72dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintBottom_toTopOf="@+id/btnInvia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDate">


        <TableRow>

            <TextView
                android:id="@+id/lblFoto"
                android:layout_width="185dp"
                android:layout_height="43dp"
                android:layout_marginStart="15dp"
                android:text="Scegli foto contatore dalla galleria immagini"
                tools:layout_editor_absoluteX="20dp"
                tools:layout_editor_absoluteY="428dp" />

            <Button
                android:id="@+id/btnCaricaFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carica"
                tools:layout_editor_absoluteX="282dp"
                tools:layout_editor_absoluteY="409dp" />

            <Button
                android:id="@+id/btnStorico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Storico" />

        </TableRow>

        <!--
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="scegli foto contatore dalla galleria" />


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tuesday" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Wednesday" />
        -->

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>