...
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgAcdaAccedi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitoloAccedi"
        app:srcCompat="@drawable/logo_acda" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableBottom="@drawable/common_google_signin_btn_icon_dark"
        android:text="Google"
        app:layout_constraintBottom_toTopOf="@+id/txtOppure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAcdaAccedi" />

...
